# reyn

./: .gitignore  CMakeLists.txt  README.md  common.h  gui.cpp  gui.h  justfile  kernel.cu  kernel.cuh  main.cpp
builddocs/: Doxyfile  conf.py  index.rst
builddocs/_staticc/: cube_relaxed.ply  cube_uniform.ply  dragon_relaxed.ply  dragon_uniform.ply
builddocs/_staticc/benchmarks/: 125Cells.json  Current.json  Initial_Version.json
builddocs/_staticc/relaxconv/: 0.01-0.005.csv  0.01-0.05.csv  0.01-0.5.csv  0.1-0.004.csv  0.1-0.005.csv  0.1-0.05.csv  0.1-0.5.csv  0.5-0.004.csv  0.5-0.005.csv  0.5-0.05.csv  0.5-0.5.csv  1-0.005.csv  1-0.05.csv  1-0.5.csv  1.5-0.004.csv  1.5-0.005.csv  1.5-0.05.csv  1.5-0.5.csv  10-0.004.csv  10-0.05.csv  100-0.005.csv  100-0.05.csv  100-0.5.csv  1000-0.005.csv  1000-0.5.csv  1e-04-0.005.csv  1e-04-0.5.csv  1e-05-0.05.csv  2-0.005.csv  2-0.05.csv  2-0.5.csv  50-0.004.csv  50-0.005.csv  500-0.05.csv  500-0.5.csv
builddocs/benchmarks/: index.md
builddocs/lbvh/: index.md
builddocs/samplings/: index.md
builddocs/scripts/: generate_benchmarks.py
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/: cube_relaxed.ply  cube_uniform.ply  dragon_relaxed.ply  dragon_uniform.ply
docs/_static/benchmarks/: 125Branchless.json  AABB_Check.json  Check_8of27.json  Current.json
docs/_static/relaxconv/: 0.01-0.005.csv  0.01-0.05.csv  0.01-0.5.csv  0.1-0.005.csv  0.1-0.05.csv  0.1-0.5.csv  0.5-0.005.csv  0.5-0.05.csv  0.5-0.5.csv  1-0.004.csv  1-0.005.csv  1-0.05.csv  1-0.5.csv  1.5-0.005.csv  1.5-0.05.csv  1.5-0.5.csv  10-0.005.csv  10-0.5.csv  100-0.004.csv  1000-0.05.csv  1e-04-0.05.csv  1e-05-0.005.csv  1e-05-0.5.csv  2-0.004.csv  2-0.005.csv  2-0.05.csv  2-0.5.csv  50-0.05.csv  50-0.5.csv  500-0.004.csv  500-0.005.csv  description.json
docs/api/: classB3.html  classC2.html  classCOS.html  classDeviceBuffer.html  classGUI.html  classIISPH.html  classKernel.html  classLBVH.html  classLog.html  classPCISPH.html  classParticles.html  classSESPH.html  classScene.html  classUniformGridBuilder.html  classW6.html  define_IISPH_8cu_1a3879e338f443b9b84ce14911e27dadfd.html  define_IISPH_8cuh_1a00ca673fdc84db832f9340fad0db643c.html  define_PCISPH_8cu_1a3879e338f443b9b84ce14911e27dadfd.html  define_PCISPH_8cuh_1ad9d7e35b74de71a1bc3b66ccdcbf7fee.html  define_SESPH_8cu_1a3879e338f443b9b84ce14911e27dadfd.html  define_SESPH_8cuh_1a6b44adda708ee9a55993b1299b16ade2.html  define_buffer_8cuh_1afde7d657e7ad58306754db6dfc2ca823.html  define_cfl_8cuh_1a47887dc2dc074a2aa7ba9840bdf27844.html  define_common_8h_1a408098ee0251b3c78fdf36be40657ad6.html  define_common_8h_1ab526f49ab0d93cc241fa24ceca343a88.html  define_common_8h_1ad51ded0bbd705f02f73fc60c0b721ced.html  define_dispatch_8cuh_1a6683d20b77fd336ffcbf9d8af2fdb55f.html  define_geometry_8cuh_1ac666768880dad9fa63d81dfba0913756.html  define_gui_8cu_1a80c04fe1a2e01db502ebdcbb04404f8f.html  define_gui_8cuh_1a6e207dbcb276167f55fd6c6afe093437.html  define_kernels_8cuh_1a1ea0e977ce63145bfc4c8278ed600e66.html  define_kernels_8cuh_1a88bae975bbe66220549a89799d5fd42a.html  define_lbvh_8cuh_1a821e574b2c1447748220d64c7559be85.html  define_loader_8cpp_1ad1ceae03a73fd42494508a2d57eaf1fe.html  define_loader_8cpp_1af14fac7fbc250522a78849d58d5b0811.html  define_particles_8cuh_1a72139c2364a6782914f40338ab5d45a9.html  define_pcdwriter_8cuh_1aab04896ab2fd82dd6d205670d7e35f01.html  define_ply__io_8cuh_1a27618cc88cc6746f594bc2514a16e449.html  define_sample_8cuh_1af86647155e963ca9342daf73adc29e6e.html  define_sample__boundary_8cuh_1af86647155e963ca9342daf73adc29e6e.html  (+405 more)
docs/benchmarks/: index.html
docs/lbvh/: index.html
docs/samplings/: index.html
res/: icon.kra
scenes/: dragon.glb  dragon.ply  license.txt
src/: buffer.cuh  common.h  gui.cpp  gui.cu  gui.cuh  gui.h  io_bmp_writer.h  kernel.cu  kernels.cu  kernels.cuh  log.h  main.cpp  main.cu  particles.cpp  particles.cu  particles.cuh  particles.h  scene.cu  scene.cuh  vector_helper.cuh
src/datastructure/: lbvh.cu  lbvh.cuh  uniformgrid.cu  uniformgrid.cuh
src/scene/: loader.cpp  loader.h  pcdwriter.cu  pcdwriter.cuh  ply_io.cu  ply_io.cuh  sample.cu  sample.cuh  sample_boundary.cu  sample_boundary.cuh  scene.cu  scene.cuh
src/solvers/: IISPH.cu  IISPH.cuh  PCISPH.cu  PCISPH.cuh  SESPH.cu  SESPH.cuh  solver.cu  solver.cuh
src/timestep/: cfl.cu  cfl.cuh
src/utils/: dispatch.cuh  geometry.cuh  vector.cuh
test/: runner.cu
